# aca-proj06

./: .gitignore  CMakeLists.txt  Canny.cpp  common.h  main.cpp  omp_sobel.cpp  omp_sobel.h  sobel.h  sobel_seq.cpp  sobel_seq.h
edgedetector/: common.h  edge_detector.h
edgedetector/omp/: omp_sobel.cpp
edgedetector/operators/: canny.cpp  sobel.cpp
